Set html background with footer color to avoid white spaces at the end of small height templates

--- a/app/assets/stylesheets/scss/_common.scss
+++ b/app/assets/stylesheets/scss/_common.scss
@@ -5,6 +5,11 @@
 @import '_variables';
 @import 'scss/sprites';
 
+html{
+  // Set footer background as default html background for templates with small height
+  background: $gray-dark;
+}
+
 body{
   font-family: $font-family-sans-serif;
   letter-spacing: 0.02em;
